dropdown menus are made visible when navbar is fixed

--- a/mica-webapp/src/main/webapp/assets/css/obiba.css
+++ b/mica-webapp/src/main/webapp/assets/css/obiba.css
@@ -92,3 +92,8 @@
 #lines > div.border-bottom:last-child {
   border-bottom: none !important;
 }
+
+.dropdown-menu {
+  z-index: 1040;
+}
+
